testsuite/tests/indexed-types/should_fail/T9167.hs
 {-# LANGUAGE TypeFamilies #-}

module T9167 where

class C a where
   type F b
